--- a/src/main/resources/templates/dash/dash.html
+++ b/src/main/resources/templates/dash/dash.html
@@ -32,8 +32,8 @@
         <!--MENU-->
 
         <div id="page-content-wrapper">
-            <div class="d-flex align-items-center" id="loader">
-                <strong class="ps-5">Loading...</strong>
+            <div class="d-flex align-items-center col align-self-center" id="loader">
+                <strong class="ps-5">Carregando...</strong>
                 <div class="spinner-border" role="status" aria-hidden="true"></div>
             </div>
             <div class="flex-grow-1">
