--- a/src/main/resources/templates/docker/gerenciarDocker.html
+++ b/src/main/resources/templates/docker/gerenciarDocker.html
@@ -36,7 +36,7 @@
                             <a class="btn btn-primary" href="./docker.html" role="button" id="cadastrarCliente">Novo</a>
                         </div>
                     </div>
-                    <div class="form-row">
+                    <div class="form-row overflow-auto">
                         <input type="hidden" id="container" th:value="${container}" />
                         <table class="table table-striped">
                             <tr>
