--- a/src/main/resources/templates/clients/gerenciarClientes.html
+++ b/src/main/resources/templates/clients/gerenciarClientes.html
@@ -37,7 +37,7 @@
                                 id="cadastrarCliente">Novo</a>
                         </div>
                     </div>
-                    <div class="form-row">
+                    <div class="form-row overflow-auto">
                         <div th:switch="${clientes}">
                             <h3 th:case="null">Sem Clientes Cadastrados!!!</h3>
                             <table th:case="*" class="table table-striped">
