--- a/src/main/resources/templates/dash/gerenciarDash.html
+++ b/src/main/resources/templates/dash/gerenciarDash.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+    xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,7 +19,8 @@
 </head>
 
 <body id="body-pd">
-    <div th:insert="components/menuTamplate :: menuTamplate(tela='dash')"></div><!--MENU-->
+    <div th:insert="components/menuTamplate :: menuTamplate(tela='dash')"></div>
+    <!--MENU-->
 
     <div id="page-content-wrapper">
         <!--BODY da página-->
@@ -32,7 +34,7 @@
                             <h1>Dashboards</h1>
                         </div>
                     </div>
-                    <div class="form-row">
+                    <div class="form-row overflow-auto">
                         <table class="table table-striped">
                             <tr>
                                 <th id="colName0">Dashboard</th>
