--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -17,9 +17,9 @@
 
 <body style="background: #ffffff;">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg" style="background-color: #2e75b5;">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="#" style="color: #ffff;">
                     Everywhere Analitics
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
@@ -29,15 +29,15 @@
                 <div class="collapse navbar-collapse" id="navbarColor01">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="#sobre">Sobre</a>
+                            <a class="nav-link" href="#sobre" style="color: #ffff;">Sobre</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#contato">Contato</a>
+                            <a class="nav-link" href="#contato" style="color: #ffff;">Contato</a>
                         </li>
 
                     </ul>
                     <form class="d-flex">
-                        <a class="btn btn-outline-secondary" href="dash.html" role="button">Entrar</a>
+                        <a class="btn btn-light" href="dash.html" role="button">Entrar</a>
                     </form>
                 </div>
             </div>
