--- a/src/main/resources/templates/user/cadastroUsuario.html
+++ b/src/main/resources/templates/user/cadastroUsuario.html
@@ -142,14 +142,14 @@
               <div class="form-row py-3">
                 <h2>Tipo de Acesso ao Sistema</h2>
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="dashCheckBox" th:field="*{accessDash}">
+                  <input class="form-check-input" type="checkbox" th:field="*{accessDash}">
                   <label class="form-check-label" for="dashCheckBox">
                     Acesso ao Dashboard
                   </label>
                 </div>
 
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="dashCheckBox" th:field="*{accessManageDash}">
+                  <input class="form-check-input" type="checkbox" th:field="*{accessManageDash}">
                   <label class="form-check-label" for="dashCheckBox">
                     Acesso ao Listar Dashboard
                   </label>
@@ -157,19 +157,19 @@
                 <!--DASH-->
                 <!--DOCKER-->
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="formCheckBox" th:field="*{accessDocker}">
+                  <input class="form-check-input" type="checkbox" th:field="*{accessDocker}">
                   <label class="form-check-label" for="formCheckBox">
                     Acesso ao Listar Docker
                   </label>
                 </div>
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="formCheckBox" th:field="*{accessManageDocker}">
+                  <input class="form-check-input" type="checkbox" th:field="*{accessManageDocker}">
                   <label class="form-check-label" for="formCheckBox">
                     Acesso ao Visualizar Docker
                   </label>
                 </div>
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="formCheckBox" th:field="*{accessResgisterDocker}">
+                  <input class="form-check-input" type="checkbox" th:field="*{accessResgisterDocker}">
                   <label class="form-check-label" for="formCheckBox">
                     Acesso ao Cadastro Docker
                   </label>
@@ -177,19 +177,19 @@
                 <!--DOCKER-->
                 <!--Formulário-->
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="formCheckBox" th:field="*{accessForms}">
+                  <input class="form-check-input" type="checkbox" th:field="*{accessForms}">
                   <label class="form-check-label" for="formCheckBox">
                     Acesso ao Listar Formulário
                   </label>
                 </div>
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="formCheckBox" th:field="*{accessManageForms}">
+                  <input class="form-check-input" type="checkbox" th:field="*{accessManageForms}">
                   <label class="form-check-label" for="formCheckBox">
                     Acesso ao Visualizar Formulário
                   </label>
                 </div>
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="formCheckBox" th:field="*{accessRegisterForms}">
+                  <input class="form-check-input" type="checkbox" th:field="*{accessRegisterForms}">
                   <label class="form-check-label" for="formCheckBox">
                     Acesso ao Cadastro Formulário
                   </label>
@@ -197,19 +197,19 @@
                 <!--Formulário-->
                 <!--Usuário-->
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="formCheckBox" th:field="*{accessUsers}">
+                  <input class="form-check-input" type="checkbox" th:field="*{accessUsers}">
                   <label class="form-check-label" for="formCheckBox">
                     Acesso ao Listar Usuário
                   </label>
                 </div>
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="formCheckBox" th:field="*{accessManageUser}">
+                  <input class="form-check-input" type="checkbox" th:field="*{accessManageUser}">
                   <label class="form-check-label" for="formCheckBox">
                     Acesso ao Visualizar Usuário
                   </label>
                 </div>
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="formCheckBox" th:field="*{accessRegisterUser}">
+                  <input class="form-check-input" type="checkbox" th:field="*{accessRegisterUser}">
                   <label class="form-check-label" for="formCheckBox">
                     Acesso ao Cadastro Usuário
                   </label>
@@ -217,19 +217,19 @@
                 <!--Usuário-->
                 <!--Clientes-->
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="formCheckBox" th:field="*{accessClients}">
+                  <input class="form-check-input" type="checkbox" th:field="*{accessClients}">
                   <label class="form-check-label" for="formCheckBox">
                     Acesso ao Listar Clientes
                   </label>
                 </div>
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="formCheckBox" th:field="*{accessManageClients}">
+                  <input class="form-check-input" type="checkbox" th:field="*{accessManageClients}">
                   <label class="form-check-label" for="formCheckBox">
                     Acesso ao Visualizar Clientes
                   </label>
                 </div>
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="formCheckBox" th:field="*{accessRegisterClients}">
+                  <input class="form-check-input" type="checkbox" th:field="*{accessRegisterClients}">
                   <label class="form-check-label" for="formCheckBox">
                     Acesso ao Cadastro Clientes
                   </label>
@@ -242,13 +242,19 @@
 
 
         </form>
+        <script>
+          var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
+          var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+            return new bootstrap.Popover(popoverTriggerEl)
+          }) 
+        </script>
       </div>
 
     </div>
 
   </div>
   </div>
-
+  <script th:src="@{/js/validationUsuario.js}" type="text/javascript"></script>
   <script th:src="@{/js/cookies.js}" type="text/javascript"></script>
 
 </body>
