--- a/src/main/resources/templates/components/menuTamplate.html
+++ b/src/main/resources/templates/components/menuTamplate.html
@@ -30,10 +30,14 @@
                         <span class="nav_logo-name">Everywhere Analitics</span>
                     </a>
 
+                    <div th:if="${#authorization.expression('hasAnyAuthority(''ROLE_USER'')')}">
+                        <!--<h6 th:each=" auth : ${#authentication.getAuthorities()}" th:text="${auth}">...</h6>-->
+                    </div>
+
                     <div
                         sec:authorize="hasAnyAuthority('ROLE_ADMIN', 'ROLE_USER', 'ROLE_SUB_USER','ROLE_ACCESS_DASH','ROLE_ACCESS_MANAGE_DASH')">
                         <div class="nav_list">
-                            <a th:href="@{~/gerenciarDash.html}" class="nav_link"
+                            <a  th:href="${#authorization.expression('hasAnyAuthority(''ROLE_ADMIN'')')} ? @{~/gerenciarDash.html} : @{~/dash.html}" class="nav_link"
                                 th:classappend="${tela == 'dash'} ? active : inactive">
                                 <i class="bi bi-graph-up-arrow"></i>
                                 <span class="nav_name">Dashboard</span>
