--- a/src/main/resources/templates/docker/docker.html
+++ b/src/main/resources/templates/docker/docker.html
@@ -34,32 +34,30 @@
 
 <body id="body-pd">
     <div th:insert="components/menuTamplate :: menuTamplate(tela='docker')"></div>
-    <form th:object="${docker}" action="#" th:action="@{/docker/save/{name}(name=${docker.name})}" method="post"
+    <form th:object="${docker}" action="#" th:action="@{/docker/save/{name}(name=${docker.name})}" method="post">
         <!--MENU-->
         <div class="ms-5" id="page-content-wrapper">
             <!--BODY da página-->
             <div class="row">
 
-                <div class="row">
-                    <div class="col mt-4 py-2 pt-3 px-3  rounded-4 shadow lightMode">
-                        <div class="row text-end">
-                            <div class="col text-start">
-                                <h3 id="title">Nome do Container Docker</h2>
-                            </div>
-                            <div class="col-auto">
-                                <button class="btn btn-primary" id="btnSave">Salvar</button>
-                            </div>
-                            <div class="col-auto">
-                                <button class="btn btn-secondary" id="btnCancel">Cancelar</button>
-                            </div>
-                            <div class="col-auto">
-                                <div class="form-check">
-                                    <input th:field="*{ativo}" class="form-check-input big-checkbox" type="checkbox"
-                                        value="" id="AtivoCheck" checked>
-                                    <label class="form-check-label textSize px-2" for="AtivoCheck">
-                                        Ativo
-                                    </label>
-                                </div>
+                <div class="col mt-4 py-2 pt-3 px-3  rounded-4 shadow lightMode">
+                    <div class="row text-end">
+                        <div class="col text-start">
+                            <h3 id="title" th:text="${nome}">Nome do Container Docker</h2>
+                        </div>
+                        <div class="col-auto">
+                            <button class="btn btn-primary" id="btnSave">Salvar</button>
+                        </div>
+                        <div class="col-auto">
+                            <button class="btn btn-secondary" id="btnCancel">Cancelar</button>
+                        </div>
+                        <div class="col-auto">
+                            <div class="form-check">
+                                <input class="form-check-input big-checkbox" type="checkbox" value="" id="AtivoCheck"
+                                    checked>
+                                <label class="form-check-label textSize px-2" for="AtivoCheck">
+                                    Ativo
+                                </label>
                             </div>
 
                         </div>
