ajustes pagina docker

--- a/src/main/resources/templates/docker/gerenciarDocker.html
+++ b/src/main/resources/templates/docker/gerenciarDocker.html
@@ -109,7 +109,7 @@
                                                 <td>${data[i]['NAMES']}</td>
                                                 <td>${data[i]['CREATED'].replace(/_/g, " ")}</td>
                                                 <td>${data[i]['STATUS'].replace(/_/g, " ")}</td>
-                                                <td><a class="btn btn-primary" href="./docker/${data[i]['NAMES']} role="button" id="${data[i]['NAMES']}">Editar</a></td>
+                                                <td><a class="btn btn-primary" href="./docker/${data[i]['NAMES']}" role="button" id="${data[i]['NAMES']}">Editar</a></td>
                                             </tr>`
                                         table.innerHTML += row
                                         // console.log(data[i].id)
