--- a/src/main/resources/templates/clients/gerenciarClientes.html
+++ b/src/main/resources/templates/clients/gerenciarClientes.html
@@ -43,7 +43,7 @@
                             <table th:case="*" class="table table-striped">
                                 <tr>
                                     <th>Nome</th>
-                                    <th>Email</th>
+                                    <th>Email <i class="bi bi-envelope"></i></th>
                                     <th>Status</th>
                                     <th>Opção</th>
                                 </tr>
